feat(index.{js,html}): Se agrerga función de limpiar juego función publica reloadWith para reiniciar los elementos del dom.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <div><button class="reloadFilter">reset</button></div>
     <h1>He was born in 1798</h1>
     <div class="container">
       <div class="game-filterOptions" id="matchSelect_1">
